internal/lang/test/testdata/errors/if_non_bool.scampi
module main

func f() int {
  if "" {
    return 1
  }
  return 0
}
